--- a/src/app/pages/ui-components/orders/orders.component.html
+++ b/src/app/pages/ui-components/orders/orders.component.html
@@ -179,7 +179,10 @@
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Order Code</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.orderCode }}</td>
         </ng-container>
-        
+        <ng-container matColumnDef="lineID">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Assigned Line</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.lineID }}</td>
+        </ng-container>
         <ng-container matColumnDef="quantityVehicle">
           <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Vehicle Count</th>
           <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.driverNumber }}</td>
