--- a/src/app/pages/ui-components/products/products.component.html
+++ b/src/app/pages/ui-components/products/products.component.html
@@ -1,140 +1,146 @@
 <mat-card class="cardWithShadow theme-card">
-    <mat-card-header>
-      <mat-card-title class="m-b-0">Products</mat-card-title>
-      <span class="flex-1-auto"></span>
-  
-      <!-- <button
-        mat-flat-button
-        color="primary"
-        matTooltipPosition="left"
-        class="m-l-8"
-        matTooltipHideDelay="100000"
-        (click)="addProduct()"
-      >
-        <mat-icon>add</mat-icon> <span fxHide.xs>Create new product</span>
-      </button> -->
-    </mat-card-header>
-  
-    <mat-card-content class="b-t-1">
-      <div class="table-responsive m-t-16">
-        <mat-form-field class="w-100" appearance="outline">
-          <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search....">
-        </mat-form-field>
-  
-        <table mat-table [dataSource]="dataSource" class="w-100" matSort>
-          <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-              Action
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              <button
-                mat-flat-button
-                color="primary"
-                [matMenuTriggerFor]="actions"
-                class="m-t-8"
-              >
-                Action<mat-icon>arrow_drop_down</mat-icon>
-              </button>
-              <mat-menu class="cardWithShadow" #actions="matMenu">
-                <button mat-menu-item (click)="viewProductDetail(element)"> <!-- Thêm hành động Detail -->
-                    Detail
-                  </button>
-                <button mat-menu-item (click)="updateProduct(element.id)">
-                  Edit
-                </button>
-                <button mat-menu-item (click)="deleteProduct(element.id)">
-                  Delete
-                </button>
-              </mat-menu>
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="tagID">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Tag ID
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.tagID }}
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="distributorId">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-              Distributor
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.distributor?.distributorName || 'N/A' }} <!-- Chỉ hiển thị tên Distributor -->
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="productInformationId">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-              Product Name
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.productInformation?.productCode }} - {{ element.productInformation?.productName || 'N/A' }} <!-- Hiển thị mã và tên -->
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="shipmentDate">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Shipment Date
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.shipmentDate | date: 'yyyy-MM-dd' }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="productDate">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Product Date
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.productInformation.createdAt | date: 'yyyy-MM-dd' }}
-            </td>
-          </ng-container>
-  
-          <!-- <ng-container matColumnDef="delivery">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Delivery
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.delivery }}
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="stockOut">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>
-              Stock Out
-            </th>
-            <td mat-cell *matCellDef="let element" class="mat-body-1">
-              {{ element.stockOut }}
-            </td>
-          </ng-container> -->
-  
-          <!-- <ng-container matColumnDef="isActive">
-            <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">
-              Active
-            </th>
-            <td mat-cell *matCellDef="let element">
-              <ng-template [ngIf]="element.isActive">
-                <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">
-                  Yes
-                </span>
-              </ng-template>
-              <ng-template [ngIf]="!element.isActive">
-                <span class="bg-light-warning text-warning rounded f-w-600 p-6 p-y-4 f-s-12">
-                  No
-                </span>
-              </ng-template>
-            </td>
-          </ng-container> -->
-  
-          
-  
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
+  <mat-card-header>
+    <mat-card-title class="m-b-0">Products</mat-card-title>
+    <span class="flex-1-auto"></span>
+  </mat-card-header>
+
+  <mat-card-content class="b-t-1">
+    <!-- Bộ lọc -->
+    <div class="filters m-t-16 m-b-16">
+      <div class="row g-3">
+        <!-- Start Date -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <mat-form-field appearance="outline" class="filter-field w-100">
+            <mat-label>Start Date</mat-label>
+            <input matInput [matDatepicker]="startPicker" [(ngModel)]="startDate">
+            <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+            <mat-datepicker #startPicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <!-- End Date -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <mat-form-field appearance="outline" class="filter-field w-100">
+            <mat-label>End Date</mat-label>
+            <input matInput [matDatepicker]="endPicker" [(ngModel)]="endDate">
+            <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+            <mat-datepicker #endPicker></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <!-- Distributor -->
+        <div class="col-12 col-md-6 col-lg-2">
+          <mat-form-field appearance="outline" class="filter-field w-100">
+            <mat-label>Distributor</mat-label>
+            <input type="text" matInput [matAutocomplete]="autoDistributor" [(ngModel)]="distributorKeyword"
+                   (input)="filterDistributors()">
+            <mat-autocomplete #autoDistributor="matAutocomplete" [displayWith]="displayDistributorName"
+                              (optionSelected)="onDistributorSelected($event)">
+              <mat-option [value]="null">All</mat-option>
+              <mat-option *ngFor="let distributor of filteredDistributors" [value]="distributor">
+                {{ distributor.distributorName }}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+        </div>
+        <!-- Product -->
+        <div class="col-12 col-md-6 col-lg-2">
+          <mat-form-field appearance="outline" class="filter-field w-100">
+            <mat-label>Product</mat-label>
+            <input type="text" matInput [matAutocomplete]="autoProduct" [(ngModel)]="productKeyword"
+                   (input)="filterProducts()">
+            <mat-autocomplete #autoProduct="matAutocomplete" [displayWith]="displayProductName"
+                              (optionSelected)="onProductInformationSelected($event)">
+              <mat-option [value]="null">All</mat-option>
+              <mat-option *ngFor="let product of filteredProducts" [value]="product">
+                {{ product.productName }}
+              </mat-option>
+            </mat-autocomplete>
+          </mat-form-field>
+        </div>
+        <!-- Group By -->
+        <div class="col-12 col-md-6 col-lg-2">
+          <mat-form-field appearance="outline" class="filter-field w-100">
+            <mat-label>Group By</mat-label>
+            <mat-select [(ngModel)]="selectedGroupBy">
+              <mat-option value="day">Day</mat-option>
+              <mat-option value="week">Week</mat-option>
+              <mat-option value="month">Month</mat-option>
+              <mat-option value="year">Year</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
-  
-      <mat-paginator [pageSize]="10" [pageSizeOptions]="[4, 6, 10, 20]"></mat-paginator>
-    </mat-card-content>
-  </mat-card>
+      <!-- Search | Reset | Export -->
+      <div class="row g-3 mt-2">
+        <div class="col-12 col-md-4">
+          <button mat-flat-button color="primary" class="filter-button w-100" (click)="applyFilter()">
+            <mat-icon>search</mat-icon> Search
+          </button>
+        </div>
+        <div class="col-12 col-md-4">
+          <button mat-flat-button color="warn" class="filter-button w-100" (click)="resetFilters()">
+            <mat-icon>refresh</mat-icon> Reset
+          </button>
+        </div>
+        <div class="col-12 col-md-4">
+          <button mat-flat-button color="accent" class="filter-button w-100" (click)="exportToExcel()">
+            <mat-icon>file_download</mat-icon> Export
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="table-responsive m-t-16">
+      <mat-form-field class="w-100" appearance="outline">
+        <input matInput type="text" (keyup)="doFilter($any($event).target.value)" placeholder="Search by Tag ID">
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSource" class="w-100" matSort>
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Action</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">
+            <button mat-flat-button color="primary" [matMenuTriggerFor]="actions" class="m-t-8">
+              Action<mat-icon>arrow_drop_down</mat-icon>
+            </button>
+            <mat-menu class="cardWithShadow" #actions="matMenu">
+              <button mat-menu-item (click)="viewProductDetail(element)">Detail</button>
+            </mat-menu>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="tagID">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Tag ID</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.tagID }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="distributorName">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Distributor</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.distributorName || 'N/A' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="productName">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Product Name</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.productName || 'N/A' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="productCode">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Product Code</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.productCode || 'N/A' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="shipmentDate">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14" mat-sort-header>Shipment Date</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.shipmentDate | date: 'yyyy-MM-dd' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="groupedPeriod">
+          <th mat-header-cell *matHeaderCellDef class="f-w-600 mat-subtitle-1 f-s-14">Grouped Period</th>
+          <td mat-cell *matCellDef="let element" class="mat-body-1">{{ element.groupedPeriod || 'N/A' }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+
+    <mat-paginator [pageSize]="10" [pageSizeOptions]="[4, 6, 10, 20]"></mat-paginator>
+  </mat-card-content>
+</mat-card>
