--- a/src/app/pages/ui-components/orders/orders.component.html
+++ b/src/app/pages/ui-components/orders/orders.component.html
@@ -104,7 +104,7 @@
             <mat-autocomplete #autoProduct="matAutocomplete" [displayWith]="displayProductName" (optionSelected)="onProductInfomationSelected($event)">
               <mat-option [value]="null">All</mat-option>
               <mat-option *ngFor="let product of filteredProducts" [value]="product">
-                {{ product.productName }}
+                {{ product.productCode }} - {{ product.productName }}
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
